platform specific dependency and headless support for CI